<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xchat.stevenzack.langenius.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:elevation="15dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="#fff"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:background="?attr/selectableItemBackground"
            android:text="@string/str_default_port"
            android:textAllCaps="false"
            android:id="@+id/set_bt_default_port"

            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            android:id="@+id/set_bt_frcvpath"
            android:text="@string/storagepath"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="false"
            android:id="@+id/set_bt_html"
            android:text="@string/custom_html_file"
            android:layout_height="wrap_content" />
    </LinearLayout>
</FrameLayout>
