<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xchat.stevenzack.langenius.MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="160dp">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="40dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:text="@string/cbhasbeenshared"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="200dp"
            android:text="asgdhj\nasgdjhga"
            android:textColor="#fff"
            android:id="@+id/cb_text"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_height="90dp" />
    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="192.168.1.109:4444"
        android:textSize="20dp"
        android:id="@+id/txt_hostname"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content" />
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="170dp"
        android:elevation="10dp"
        android:layout_gravity="end"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:id="@+id/bt_openbrowser"
            android:padding="10dp"
            android:text="@string/openinbrowser"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/shareFiles"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content" />
    <ListView
        android:layout_width="match_parent"
        android:layout_marginTop="250dp"
        android:id="@+id/main_listview"
        android:layout_height="200dp">
    </ListView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:clickable="true"
        android:elevation="15dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_action_name" />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/txt_storagePath"
        android:text="@string/storagepath"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="bottom"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content" />
</FrameLayout>
